2014-01-26  Charlie Zender  <zender@uci.edu>

	* Remove early exit from nco_cnk_sz_set(). Revert some changes.

	* Tidy nco_cnk.c

	* NCO 4.4.1 release procedure:
 	Changes since nco-4_4_0: -X, cnk?, hsh?
	cd ~/nco;cvs tag -d nco-4_4_1;cvs tag -d nco-4_4_1-1
	cd ~/nco;cvs commit -m "Preparing nco-4.4.1 release"
	cvs tag -c nco-4_4_1;cvs tag -c nco-4_4_1-1

	* NB: Unidata renamed netCDF 4.3.1-rc7 as 4.3.1. Some NCO notes	still say 4.3.1-rc7.

2014-01-23  Pedro Vicente  <pvicente@uci.edu>

	* nco_dmn_malloc() Inquire about number of dimensions in group and return dynamic array of dimension IDs

2014-01-22  Pedro Vicente  <pvicente@uci.edu>

	* nco_prs_aux_crd() Parse auxiliary coordinates limits directly into traversal table

2014-01-21  Pedro Vicente  <pvicente@uci.edu>

	* Add nco_var_scp(). Check if one variable is in scope of another.

2014-01-21  Charlie Zender  <zender@uci.edu>

	* ncgen breaks on hidden attributes in CDL with netCDF 4.1.1- (201111)
	Hence NCO 4.4.0 has many regressions on older netCDF
	Need to move in_grp.cdl hidden attributes group g13 into its own "safe" file

	* Performed autoreconf --force to update config.{sub,guess} for	Debian AArch64

	* Add nces.1 manpage to automake instructions

2014-01-20  Pedro Vicente  <pvicente@uci.edu>

	* Add ncks regressions #81,#82,#83,84 --cnk_dmn full names

2014-01-17  Charlie Zender  <zender@uci.edu>

	* Turn-off shuffle when uncompressing otherwise chunking requests may fail

	* Add nco_def_var_fletcher32() wrapper and stub

2014-01-17  Pedro Vicente  <pvicente@uci.edu>

	* Add ncks regressions #81,#82 --cnk_dmn full names

	* Add ncks regressions #83 Chunking and shuffle filter

2014-01-16  Pedro Vicente  <pvicente@uci.edu>

	* Add test data for --cnk_dmn full names in_grp_3.cdl

	* Add ncks regression #80 Chunking and uncompression (-L 0)

	* Add utility functions nco_strrstr(), nco_is_fll_pth()

2014-01-16  Charlie Zender  <zender@uci.edu>
